--- a/assets/scss/_variables2.scss
+++ b/assets/scss/_variables2.scss
@@ -1,5 +1,5 @@
 :root {
-    --dark-caramel: #BF7651;
+    --dark-caramel: #c19b71;
     --pure-black: #000;
     --light-white: #3c3c3c;
     --pure-white: #1c1c1d;
