--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,10 +1,10 @@
 :root {
-    --dark-caramel: #BF7651;
+    --dark-caramel: #c19b76;
     --pure-black: #1c1c1d;
     --light-white: #f8f8ff;
     --pure-white: #fff;
     --light-grey-1: #9c9c9c;
     --light-grey-2: #7c7c7c;
     --dark-grey-1: #5c5c5c;
-    --dark-grey-2: #3c3c3c;
+    --dark-grey-2: #2c2c2c;
 }
