--- a/assets/scss/_employees.scss
+++ b/assets/scss/_employees.scss
@@ -5,7 +5,7 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     background-color: var(--pure-white);
-    border-radius: 10px;
+    // border-radius: 10px;
     box-shadow: 2px 0 40px -25px;
     width: 90%;
     margin: 30px auto 0 auto;
