--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -1,4 +1,5 @@
 .content{
+    letter-spacing: 1px;
     background-color: var(--light-white);
     display: flex;
     flex-direction: column;
@@ -19,4 +20,9 @@
         box-shadow: 0px 2px 40px -18px;
         
     }
+
+    @media (max-width: 1000px ), (orientation: portrait){
+        padding-top: 56px;
+    }
 }
+
