--- a/assets/scss/_dashboard.scss
+++ b/assets/scss/_dashboard.scss
@@ -13,7 +13,7 @@
         width: 20%;
         height: 90px;
         background-color: var(--pure-white);
-        border-radius: 10px;
+        // border-radius: 10px;
         box-shadow: 2px 0 40px -25px;
 
         &:nth-of-type(1){
@@ -52,7 +52,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            border-radius: 10px 0px 0px 10px;
+            // border-radius: 10px 0px 0px 10px;
         }
         .data{
             width: 60%;
@@ -77,29 +77,32 @@
         align-self: flex-start;
         //height: 100%;
         margin: 30px 0 0 0;
-        border-radius: 10px;
+        // border-radius: 10px;
         background-color: var(--pure-white);
         box-shadow: 2px 0 40px -25px;
-
+        letter-spacing: 0;
         .chart-label{
+            letter-spacing: 1px;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 22px;
-            font-weight: 500;
+            font-weight: 300;
             color: var(--pure-white);
             width: 100%;
             height: 70px;
             text-align: center;
             background-color: var(--dark-grey-2);
-            border-radius: 10px 10px 0px 0px;
+            // border-radius: 10px 10px 0px 0px;
             padding: 10px 10px 10px 10px;
+            
         }
 
         #chart-rooms, #chart-earnings{
             padding: 30px 20px 10px 20px;
             width: 100%;
             height: 500px;
+            
         }
     }
 
