--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -82,12 +82,12 @@ input {
 .nav__center {
   display: flex;
   width: 40%;
-  height: 30px;
+  height: 34px;
   padding: 0 15px 0 15px;
   align-items: center;
   justify-content: space-between;
   color: var(--light-grey-1);
-  border: 2px solid var(--light-grey-1);
+  background-color: #111;
   border-radius: 4px;
 }
 
@@ -127,6 +127,10 @@ input {
 .nav__right a {
   color: var(--dark-caramel);
   padding: 15px 15px 15px 5px;
+}
+
+.nav__right a :hover {
+  opacity: 0.8;
 }
 
 @media (max-width: 600px) {
@@ -433,7 +437,7 @@ input {
   box-shadow: 2px 0 40px -25px;
   width: 90%;
   margin: 30px auto 0 auto;
-  padding-bottom: 30px;
+  padding-bottom: 40px;
 }
 
 .employees hr {
@@ -451,7 +455,9 @@ input {
 
 .employees .header .label {
   font-size: 20px;
-  padding: 20px 0 20px 30px;
+  letter-spacing: 1px;
+  padding: 40px 0 40px 0;
+  text-align: center;
 }
 
 .employees .header .table-header {
@@ -472,18 +478,7 @@ input {
 
 .employees .user {
   font-size: 25px;
-}
-
-.employees:nth-child(2n+0) .user {
-  color: var(--dark-grey);
-}
-
-.employees:nth-child(n+0) .user {
-  color: var(--dark-caramel);
-}
-
-.employees .edit {
-  font-size: 16px;
+  color: var(--light-grey-2);
 }
 
 .employees .name {
@@ -494,6 +489,32 @@ input {
   text-align: center;
 }
 
+.employees .editEmployeeBtn {
+  background: none;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  color: var(--dark-caramel);
+  cursor: pointer;
+}
+
+.employees .editEmployeeBtn:hover {
+  opacity: 0.8;
+}
+
+.employees .addEmployeeBtn {
+  background: none;
+  outline: none;
+  border: none;
+  font-size: 20px;
+  color: var(--dark-caramel);
+  cursor: pointer;
+}
+
+.employees .addEmployeeBtn:hover {
+  opacity: 0.8;
+}
+
 @media (max-width: 900px) {
   .employees .header .table-header {
     display: none;
@@ -501,6 +522,7 @@ input {
   .employees .table-row {
     grid-template-columns: 1fr;
     text-align: center;
+    line-height: 1.4;
   }
 }
 
@@ -556,6 +578,10 @@ input {
   color: var(--pure-black);
   font-weight: 900;
   font-size: 18px;
+}
+
+.login .box input[type="submit"]:hover {
+  opacity: 0.8;
 }
 
 @media (max-width: 500px) {
