--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -179,7 +179,7 @@ input {
 .sidebar.shown {
   position: fixed;
   transform: translate(0, 0);
-  width: 80%;
+  width: 230px;
 }
 
 .sidebar.shown a {
@@ -455,6 +455,7 @@ input {
 
 .employees .header .label {
   font-size: 20px;
+  font-weight: 700;
   letter-spacing: 1px;
   padding: 40px 0 40px 0;
   text-align: center;
@@ -520,6 +521,210 @@ input {
     display: none;
   }
   .employees .table-row {
+    grid-template-columns: 1fr;
+    text-align: center;
+    line-height: 1.4;
+  }
+}
+
+.rooms {
+  display: flex;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  background-color: var(--pure-white);
+  box-shadow: 2px 0 40px -25px;
+  width: 90%;
+  margin: 30px auto 0 auto;
+  padding-bottom: 40px;
+}
+
+.rooms hr {
+  width: 100%;
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), var(--light-grey-1), rgba(0, 0, 0, 0));
+}
+
+.rooms .header {
+  width: 100%;
+  color: var(--light-grey-2);
+  font-weight: 500;
+}
+
+.rooms .header .label {
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  padding: 40px 0 40px 0;
+  text-align: center;
+}
+
+.rooms .header .table-header {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 0.5fr 0.8fr 0.8fr 0.8fr 1fr 0.5fr;
+  padding: 10px;
+}
+
+.rooms .table-row {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 0.5fr 0.8fr 0.8fr 0.8fr 1fr 0.5fr;
+  padding: 10px;
+  color: var(--dark-grey-2);
+  align-items: center;
+}
+
+.rooms .user {
+  font-size: 25px;
+  color: var(--light-grey-2);
+}
+
+.rooms .name {
+  font-weight: 700;
+}
+
+.rooms .center {
+  text-align: center;
+}
+
+.rooms .editRoomBtn {
+  background: none;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  color: var(--dark-caramel);
+  cursor: pointer;
+}
+
+.rooms .editRoomBtn:hover {
+  opacity: 0.8;
+}
+
+.rooms .addRoomBtn {
+  background: none;
+  outline: none;
+  border: none;
+  font-size: 20px;
+  color: var(--dark-caramel);
+  cursor: pointer;
+}
+
+.rooms .addRoomBtn:hover {
+  opacity: 0.8;
+}
+
+@media (max-width: 900px) {
+  .rooms .header .table-header {
+    display: none;
+  }
+  .rooms .table-row {
+    grid-template-columns: 1fr;
+    text-align: center;
+    line-height: 1.4;
+  }
+}
+
+.reservations {
+  display: flex;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  background-color: var(--pure-white);
+  box-shadow: 2px 0 40px -25px;
+  width: 90%;
+  margin: 30px auto 0 auto;
+  padding-bottom: 40px;
+}
+
+.reservations hr {
+  width: 100%;
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), var(--light-grey-1), rgba(0, 0, 0, 0));
+}
+
+.reservations .header {
+  width: 100%;
+  color: var(--light-grey-2);
+  font-weight: 500;
+}
+
+.reservations .header .label {
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  padding: 40px 0 40px 0;
+  text-align: center;
+}
+
+.reservations .header .table-header {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 0.5fr 0.8fr 0.8fr 0.8fr 1fr;
+  padding: 10px;
+}
+
+.reservations .table-row {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 0.5fr 0.8fr 0.8fr 0.8fr 1fr;
+  padding: 10px;
+  color: var(--dark-grey-2);
+  align-items: center;
+}
+
+.reservations .table-row .short {
+  letter-spacing: 0;
+}
+
+.reservations .user {
+  font-size: 25px;
+  color: var(--light-grey-2);
+}
+
+.reservations .name {
+  font-weight: 700;
+}
+
+.reservations .center {
+  text-align: center;
+}
+
+.reservations .editRoomBtn {
+  background: none;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  color: var(--dark-caramel);
+  cursor: pointer;
+}
+
+.reservations .editRoomBtn:hover {
+  opacity: 0.8;
+}
+
+.reservations .addRoomBtn {
+  background: none;
+  outline: none;
+  border: none;
+  font-size: 20px;
+  color: var(--dark-caramel);
+  cursor: pointer;
+}
+
+.reservations .addRoomBtn:hover {
+  opacity: 0.8;
+}
+
+@media (max-width: 900px) {
+  .reservations .header .table-header {
+    display: none;
+  }
+  .reservations .table-row {
     grid-template-columns: 1fr;
     text-align: center;
     line-height: 1.4;
