--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -15,7 +15,7 @@
     &.shown{
         position: fixed;
         transform: translate(0, 0);
-        width: 80%;
+        width: 230px;
         //box-shadow: 20px 20px 30px 20px var(--pure-white);
         a{
             width: 100%;
