--- a/assets/scss/_login.scss
+++ b/assets/scss/_login.scss
@@ -12,7 +12,8 @@
 
     h1{
         font-weight: 500;
-        color:var(--dark-caramel)
+        color:var(--pure-white);
+        margin-bottom: 5px;
     }
     
     .box{
@@ -25,13 +26,13 @@
         text-align: center;
         // border-radius: 10px;
         font-weight: 500;
-         border: 2px solid var(--dark-caramel);
+         border: 2px solid var(--pure-white);
         
         
 
         input[type ="email"], input[type ="password"]{
             letter-spacing: 1px;
-            border: 2px solid var(--dark-caramel);
+            border: 2px solid var(--pure-white);
             padding: 14px 10px;
             text-align: center;
             margin-top: 15px;
@@ -40,7 +41,7 @@
             // border-radius: 10px;
             background: none;
             font-size: 18px;
-            color: var(--dark-caramel);
+            color: var(--pure-white);
             z-index: 900;
         }
 
@@ -51,11 +52,11 @@
             letter-spacing: 1px;
             border: none;
             // border-radius: 10px;
-            margin-top: 15px;
+            margin-top: 20px;
             padding: 10px;
             cursor: pointer;
-            color: var(--pure-black);
-            font-weight: 900;
+            color: var(--pure-white);
+            font-weight: 500;
             font-size: 18px;
             &:hover{
                 opacity: 0.8;
