--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -796,6 +796,7 @@ input {
 }
 
 .emails .email-form .send {
+  border: none;
   padding: 15px;
   letter-spacing: 1px;
   align-self: center;
@@ -876,6 +877,18 @@ input {
   .login .box input[type="email"], .login .box input[type="password"] {
     width: 100%;
   }
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--pure-black);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--dark-caramel);
 }
 
 body {
