--- a/assets/scss/_emails.scss
+++ b/assets/scss/_emails.scss
@@ -64,6 +64,7 @@
 
 
         .send{
+            border: none;
             padding: 15px;
             letter-spacing: 1px;
             align-self: center;
