light-white color variable changed

--- a/assets/scss/_emails.scss
+++ b/assets/scss/_emails.scss
@@ -43,7 +43,7 @@
             font-family: 'Roboto';
             border: none;
             font-size: 18px;
-            background-color: rgb(233, 233, 233);
+            background-color: var(--light-white);
             letter-spacing: 1px;
             outline: none;
             resize: vertical;
