--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -73,9 +73,9 @@
             
             :hover{
                 background-color: var(--light-white);
-                color: var(--dark-caramel);
+                //color: var(--dark-caramel);
                 .selector{
-                    background-color: var(--dark-caramel);
+                    background-color: var(--light-white);
                 }
             }
 
