--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 :root {
     --dark-caramel: #c19b76;
     --pure-black: #1c1c1d;
-    --light-white: #f8f8ff;
+    --light-white: #f4f4f4;
     --pure-white: #fff;
     --light-grey-1: #9c9c9c;
     --light-grey-2: #7c7c7c;
