--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,7 @@ input {
 :root {
   --dark-caramel: #c19b76;
   --pure-black: #1c1c1d;
-  --light-white: #f8f8ff;
+  --light-white: #f4f4f4;
   --pure-white: #fff;
   --light-grey-1: #9c9c9c;
   --light-grey-2: #7c7c7c;
@@ -244,11 +244,10 @@ input {
 
 .sidebar__options li :hover {
   background-color: var(--light-white);
-  color: var(--dark-caramel);
 }
 
 .sidebar__options li :hover .selector {
-  background-color: var(--dark-caramel);
+  background-color: var(--light-white);
 }
 
 .sidebar__options li.actual {
@@ -776,7 +775,7 @@ input {
   font-family: 'Roboto';
   border: none;
   font-size: 18px;
-  background-color: #e9e9e9;
+  background-color: var(--light-white);
   letter-spacing: 1px;
   outline: none;
   resize: vertical;
