--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,15 +121,19 @@ input {
 
 .nav__right {
   color: var(--dark-caramel);
+}
+
+.nav__right button, .nav__right a {
+  background: none;
+  outline: none;
+  border: none;
+  cursor: pointer;
   font-size: 25px;
-}
-
-.nav__right a {
   color: var(--dark-caramel);
-  padding: 15px 15px 15px 5px;
+  margin: 15px 15px 15px 5px;
 }
 
-.nav__right a :hover {
+.nav__right button :hover, .nav__right a :hover {
   opacity: 0.8;
 }
 
@@ -145,13 +149,13 @@ input {
     display: none;
   }
   .nav__right a {
-    padding-right: 5px;
+    padding-right: 0px;
+  }
+  .nav .settings {
+    margin-right: 5px;
   }
   .nav__left {
     padding-left: 5px;
-  }
-  .nav .settings {
-    display: none;
   }
   .nav .logo1 {
     display: none;
@@ -903,10 +907,121 @@ body {
   scrollbar-color: var(--dark-grey-2) var(--light-grey-2);
 }
 
+.settings_form {
+  display: none;
+  position: fixed;
+  z-index: 850;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.8);
+  animation-name: modalopen;
+  animation-duration: 0.3s;
+}
+
+.settings_form #modal_content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--light-white);
+  margin: 20vh auto;
+  padding: 40px;
+  width: 600px;
+  box-shadow: 2px 0 40px -25px;
+  border-radius: 2px;
+}
+
+.settings_form #modal_content h1 {
+  color: var(--dark-grey-1);
+}
+
+.settings_form #modal_content .element {
+  display: grid;
+  grid-template-columns: 1.52fr 4fr;
+  align-items: center;
+  margin-top: 20px;
+  background-color: var(--light-grey-1);
+}
+
+.settings_form #modal_content .element label {
+  display: flex;
+  align-items: center;
+  color: var(--dark-grey-2);
+  width: 100%;
+  height: 100%;
+  font-weight: 500;
+  font-size: 18px;
+  padding-left: 15px;
+}
+
+.settings_form #modal_content input {
+  color: var(--dark-grey-2);
+  width: 300px;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+}
+
+.settings_form #modal_content button {
+  background-color: var(--dark-caramel);
+  width: 115px;
+  outline: none;
+  letter-spacing: 1px;
+  border: none;
+  margin-top: 20px;
+  padding: 15px;
+  cursor: pointer;
+  color: var(--pure-white);
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.settings_form #modal_content button:hover {
+  opacity: 0.8;
+}
+
+.settings_form #modal_content .settings_footer {
+  width: 415px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
 @media (max-width: 600px) {
   .sidebar {
     position: fixed;
     transform: translate(-220px, 0);
+  }
+  .settings_form #modal_content {
+    margin-top: 12vh;
+    width: 350px;
+  }
+  .settings_form #modal_content .element {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .settings_form #modal_content .element label {
+    height: 40px;
+  }
+  .settings_form #modal_content .settings_footer {
+    width: 300px;
+  }
+}
+
+@media (min-height: 800px) {
+  .settings_form #modal_content {
+    margin-top: 18vh;
+  }
+}
+
+@keyframes modalopen {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
 /*# sourceMappingURL=main.css.map */
