--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -18,11 +18,130 @@ body{
 }
 
 
+.settings_form{
+    display: none;
+    position: fixed;
+    z-index: 850;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background-color: rgba($color: #000000, $alpha: 0.8);
+    animation-name: modalopen;
+    animation-duration: 0.3s;
+    
+    #modal_content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: var(--light-white);
+        margin: 20vh auto;
+        padding: 40px;
+        width: 600px;
+        box-shadow: 2px 0 40px -25px;
+        border-radius: 2px;
+        
+
+        h1{
+            color: var(--dark-grey-1);
+        }
+
+        .element{
+            display: grid;
+            grid-template-columns: 1.52fr 4fr;
+            align-items: center;
+            margin-top: 20px;
+            
+            
+            // padding-left: 15px;
+            background-color: var(--light-grey-1);
+            
+
+            label{
+                display: flex;
+                align-items: center;
+                color: var(--dark-grey-2);
+                width: 100%;
+                height: 100%;
+                font-weight: 500;
+                font-size: 18px;
+                padding-left: 15px;
+            }
+        }
+
+        input{
+            color: var(--dark-grey-2);
+            width: 300px;
+            font-size: 18px;
+            padding: 15px;
+            border: none;
+        }
+
+        button{
+            background-color: var(--dark-caramel);
+            width: 115px;
+            outline: none;
+            letter-spacing: 1px;
+            border: none;
+            margin-top: 20px;
+            padding: 15px;
+            cursor: pointer;
+            color: var(--pure-white);
+            font-weight: 500;
+            font-size: 18px;
+            &:hover{
+                opacity: 0.8;
+            }
+        }
+
+        .settings_footer{
+            width: 415px;
+            // display: flex;
+            // justify-content: center;
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
+        }
+    }
+}
+
+
 @media (max-width: 600px){
     .sidebar{
         position: fixed;
         transform: translate(-220px, 0);
         
     }
+    .settings_form{
+        #modal_content{
+            margin-top: 12vh;
+            width: 350px;
+            .element{
+                display: grid;
+                grid-template-columns: 1fr;
+                
+                label{
+                    height: 40px;
+                }
+            }
+
+            .settings_footer{
+                width: 300px
+            }
+        }
+    }
 }
 
+@media (min-height: 800px){
+    .settings_form{
+        #modal_content{
+            margin-top: 18vh;
+        }
+    }
+}
+
+@keyframes modalopen{
+    from{ opacity: 0}
+    to {opacity: 1}
+}
