--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -530,6 +530,96 @@ input {
   }
 }
 
+.add_employee_form {
+  display: block;
+  position: fixed;
+  z-index: 850;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.8);
+  animation-name: modalopen;
+  animation-duration: 0.3s;
+}
+
+.add_employee_form #modal_content2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--light-white);
+  margin: 20vh auto;
+  padding: 40px;
+  width: 600px;
+  box-shadow: 2px 0 40px -25px;
+  border-radius: 2px;
+}
+
+.add_employee_form #modal_content2 h1 {
+  color: var(--dark-grey-1);
+}
+
+.add_employee_form #modal_content2 .element {
+  display: grid;
+  grid-template-columns: 1.52fr 4fr;
+  align-items: center;
+  margin-top: 20px;
+  background-color: var(--light-grey-1);
+}
+
+.add_employee_form #modal_content2 .element label {
+  display: flex;
+  align-items: center;
+  color: var(--dark-grey-2);
+  width: 100%;
+  height: 100%;
+  font-weight: 500;
+  font-size: 18px;
+  padding-left: 15px;
+}
+
+.add_employee_form #modal_content2 input {
+  color: var(--dark-grey-2);
+  width: 300px;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+}
+
+.add_employee_form #modal_content2 select {
+  color: var(--dark-grey-2);
+  width: 300px;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+}
+
+.add_employee_form #modal_content2 button {
+  background-color: var(--dark-caramel);
+  width: 115px;
+  outline: none;
+  letter-spacing: 1px;
+  border: none;
+  margin-top: 20px;
+  padding: 15px;
+  cursor: pointer;
+  color: var(--pure-white);
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.add_employee_form #modal_content2 button:hover {
+  opacity: 0.8;
+}
+
+.add_employee_form #modal_content2 .add_employee_footer {
+  width: 415px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
 .rooms {
   display: flex;
   align-items: flex-start;
@@ -910,7 +1000,7 @@ body {
 .settings_form {
   display: none;
   position: fixed;
-  z-index: 850;
+  z-index: 880;
   left: 0;
   top: 0;
   height: 100%;
