--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -720,6 +720,96 @@ input {
   }
 }
 
+.add_room_form {
+  display: none;
+  position: fixed;
+  z-index: 850;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.8);
+  animation-name: modalopen;
+  animation-duration: 0.3s;
+}
+
+.add_room_form #modal_content3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--light-white);
+  margin: 20vh auto;
+  padding: 40px;
+  width: 600px;
+  box-shadow: 2px 0 40px -25px;
+  border-radius: 2px;
+}
+
+.add_room_form #modal_content3 h1 {
+  color: var(--dark-grey-1);
+}
+
+.add_room_form #modal_content3 .element {
+  display: grid;
+  grid-template-columns: 2fr 4fr;
+  align-items: center;
+  margin-top: 20px;
+  background-color: var(--light-grey-1);
+}
+
+.add_room_form #modal_content3 .element label {
+  display: flex;
+  align-items: center;
+  color: var(--dark-grey-2);
+  width: 100%;
+  height: 100%;
+  font-weight: 500;
+  font-size: 18px;
+  padding-left: 15px;
+}
+
+.add_room_form #modal_content3 input {
+  color: var(--dark-grey-2);
+  width: 300px;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+}
+
+.add_room_form #modal_content3 select {
+  color: var(--dark-grey-2);
+  width: 300px;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+}
+
+.add_room_form #modal_content3 button {
+  background-color: var(--dark-caramel);
+  width: 150px;
+  outline: none;
+  letter-spacing: 1px;
+  border: none;
+  margin-top: 20px;
+  padding: 15px;
+  cursor: pointer;
+  color: var(--pure-white);
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.add_room_form #modal_content3 button:hover {
+  opacity: 0.8;
+}
+
+.add_room_form #modal_content3 .add_room_footer {
+  width: 449px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
 .reservations {
   display: flex;
   align-items: flex-start;
