--- a/assets/scss/_rooms.scss
+++ b/assets/scss/_rooms.scss
@@ -98,6 +98,10 @@
             grid-template-columns: 1fr;
             text-align: center;
             line-height: 1.4;
+
+            .editRoomBtn{
+                display: none;
+            }
         }
     }
 
