--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -528,6 +528,9 @@ input {
     text-align: center;
     line-height: 1.4;
   }
+  .employees .table-row .editEmployeeBtn {
+    display: none;
+  }
 }
 
 .add_employee_form {
@@ -717,6 +720,9 @@ input {
     grid-template-columns: 1fr;
     text-align: center;
     line-height: 1.4;
+  }
+  .rooms .table-row .editRoomBtn {
+    display: none;
   }
 }
 
@@ -1106,7 +1112,7 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: var(--light-white);
-  margin: 20vh auto;
+  margin: 10vh auto;
   padding: 40px;
   width: 600px;
   box-shadow: 2px 0 40px -25px;
@@ -1187,12 +1193,6 @@ body {
   }
   .settings_form #modal_content .settings_footer {
     width: 300px;
-  }
-}
-
-@media (min-height: 800px) {
-  .settings_form #modal_content {
-    margin-top: 18vh;
   }
 }
 
