--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -552,7 +552,7 @@ input {
   flex-direction: column;
   align-items: center;
   background-color: var(--light-white);
-  margin: 20vh auto;
+  margin: 10vh auto;
   padding: 40px;
   width: 600px;
   box-shadow: 2px 0 40px -25px;
@@ -745,7 +745,7 @@ input {
   flex-direction: column;
   align-items: center;
   background-color: var(--light-white);
-  margin: 20vh auto;
+  margin: 10vh auto;
   padding: 40px;
   width: 600px;
   box-shadow: 2px 0 40px -25px;
@@ -1082,6 +1082,126 @@ input {
   background: var(--dark-caramel);
 }
 
+#edit_employee_form {
+  letter-spacing: 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  background-color: var(--pure-white);
+  box-shadow: 2px 0 40px -25px;
+  width: 90%;
+  min-height: calc(100vh - 76px - 39px - 80px);
+  margin: 30px auto 0 auto;
+  padding-bottom: 40px;
+}
+
+#edit_employee_form hr {
+  height: 3px;
+  width: 80%;
+  border: 0;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), var(--light-white), rgba(0, 0, 0, 0));
+}
+
+#edit_employee_form hr:nth-of-type(1) {
+  margin-top: -10px;
+}
+
+#edit_employee_form hr:nth-of-type(2) {
+  margin-top: 20px;
+}
+
+#edit_employee_form h1 {
+  font-weight: 500;
+  color: var(--dark-grey-1);
+  margin: 40px;
+}
+
+#edit_employee_form .element {
+  display: grid;
+  width: 80%;
+  grid-template-columns: 1.5fr 4fr;
+  align-items: center;
+  margin-top: 20px;
+}
+
+#edit_employee_form .element label {
+  display: flex;
+  align-items: center;
+  color: var(--dark-grey-2);
+  width: 100%;
+  height: 100%;
+  font-weight: 500;
+  font-size: 18px;
+  padding-left: 15px;
+  background-color: var(--light-grey-1);
+}
+
+#edit_employee_form input {
+  color: var(--dark-grey-2);
+  width: 100%;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+  background-color: var(--light-white);
+}
+
+#edit_employee_form select {
+  color: var(--dark-grey-2);
+  width: 100%;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+  background-color: var(--light-white);
+}
+
+#edit_employee_form button {
+  background-color: var(--dark-caramel);
+  width: 27.27%;
+  outline: none;
+  letter-spacing: 1px;
+  border: none;
+  margin-top: 0px;
+  padding: 15px;
+  cursor: pointer;
+  color: var(--pure-white);
+  font-weight: 500;
+  font-size: 18px;
+}
+
+#edit_employee_form button:hover {
+  opacity: 0.8;
+}
+
+#edit_employee_form .edit_employee_footer {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+@media (max-height: 800px) {
+  #edit_employee_form {
+    min-height: calc(100vh - 76px - 39px - 20px);
+    margin-top: 0px;
+    margin-bottom: -10px;
+  }
+  #edit_employee_form .element {
+    margin-top: 10px;
+  }
+  #edit_employee_form .add_employee_footer {
+    margin-top: 10px;
+  }
+  #edit_employee_form h1 {
+    margin: 30px;
+  }
+  #edit_employee_form hr:nth-of-type(2) {
+    margin-top: 12px;
+  }
+}
+
 body {
   background-color: var(--light-white);
   min-height: 100vh;
@@ -1173,6 +1293,12 @@ body {
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
+}
+
+@media (max-height: 800px) {
+  .settings_form #modal_content .element {
+    margin-top: 10px;
+  }
 }
 
 @media (max-width: 600px) {
