--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -934,7 +934,7 @@ input {
 }
 
 .emails hr {
-  width: 100%;
+  width: 85%;
   border: 0;
   height: 1px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), var(--light-grey-1), rgba(0, 0, 0, 0));
@@ -942,6 +942,9 @@ input {
 
 .emails .header {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .emails .header .label {
@@ -981,8 +984,7 @@ input {
 
 .emails .email-form .message {
   min-height: 300px;
-  height: calc(100vh - 550px);
-  max-height: 600px;
+  height: calc(100vh - 530px);
 }
 
 .emails .email-form .send {
@@ -1000,6 +1002,22 @@ input {
 
 .emails .email-form .send:hover {
   opacity: 0.8;
+}
+
+@media (max-height: 800px) {
+  .emails {
+    margin-top: 10px;
+    padding-bottom: 30px;
+  }
+  .emails .header .label {
+    padding: 20px;
+  }
+  .emails .email-form {
+    margin-top: 20px;
+  }
+  .emails .email-form .subject, .emails .email-form .message {
+    margin-bottom: 20px;
+  }
 }
 
 .login {
@@ -1114,8 +1132,9 @@ input {
 }
 
 #edit_employee_form h1 {
-  font-weight: 500;
-  color: var(--dark-grey-1);
+  font-weight: 700;
+  font-size: 25px;
+  color: var(--light-grey-2);
   margin: 40px;
 }
 
@@ -1191,13 +1210,135 @@ input {
   #edit_employee_form .element {
     margin-top: 10px;
   }
-  #edit_employee_form .add_employee_footer {
-    margin-top: 10px;
+  #edit_employee_form .edit_employee_footer {
+    margin-top: 20px;
+    margin-bottom: -10px;
   }
   #edit_employee_form h1 {
     margin: 30px;
   }
   #edit_employee_form hr:nth-of-type(2) {
+    margin-top: 12px;
+  }
+}
+
+#edit_room_form {
+  letter-spacing: 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  background-color: var(--pure-white);
+  box-shadow: 2px 0 40px -25px;
+  width: 90%;
+  min-height: calc(100vh - 76px - 39px - 80px);
+  margin: 30px auto 0 auto;
+  padding-bottom: 40px;
+}
+
+#edit_room_form hr {
+  height: 3px;
+  width: 80%;
+  border: 0;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), var(--light-white), rgba(0, 0, 0, 0));
+}
+
+#edit_room_form hr:nth-of-type(1) {
+  margin-top: -10px;
+}
+
+#edit_room_form hr:nth-of-type(2) {
+  margin-top: 20px;
+}
+
+#edit_room_form h1 {
+  font-weight: 700;
+  font-size: 25px;
+  color: var(--light-grey-2);
+  margin: 40px;
+}
+
+#edit_room_form .element {
+  display: grid;
+  width: 80%;
+  grid-template-columns: 1.5fr 4fr;
+  align-items: center;
+  margin-top: 20px;
+}
+
+#edit_room_form .element label {
+  display: flex;
+  align-items: center;
+  color: var(--dark-grey-2);
+  width: 100%;
+  height: 100%;
+  font-weight: 500;
+  font-size: 18px;
+  padding-left: 15px;
+  background-color: var(--light-grey-1);
+}
+
+#edit_room_form input {
+  color: var(--dark-grey-2);
+  width: 100%;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+  background-color: var(--light-white);
+}
+
+#edit_room_form select {
+  color: var(--dark-grey-2);
+  width: 100%;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+  background-color: var(--light-white);
+}
+
+#edit_room_form button {
+  background-color: var(--dark-caramel);
+  width: 27.27%;
+  outline: none;
+  letter-spacing: 1px;
+  border: none;
+  margin-top: 0px;
+  padding: 15px;
+  cursor: pointer;
+  color: var(--pure-white);
+  font-weight: 500;
+  font-size: 18px;
+}
+
+#edit_room_form button:hover {
+  opacity: 0.8;
+}
+
+#edit_room_form .edit_room_footer {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+@media (max-height: 800px) {
+  #edit_room_form {
+    min-height: calc(100vh - 76px - 39px - 20px);
+    margin-top: 0px;
+    margin-bottom: -10px;
+  }
+  #edit_room_form .element {
+    margin-top: 10px;
+  }
+  #edit_room_form .edit_room_footer {
+    margin-top: 30px;
+  }
+  #edit_room_form h1 {
+    margin: 30px;
+  }
+  #edit_room_form hr:nth-of-type(2) {
     margin-top: 12px;
   }
 }
@@ -1241,6 +1382,7 @@ body {
 
 .settings_form #modal_content h1 {
   color: var(--dark-grey-1);
+  padding-bottom: 10px;
 }
 
 .settings_form #modal_content .element {
@@ -1248,6 +1390,7 @@ body {
   grid-template-columns: 3fr 4fr;
   align-items: center;
   margin-top: 20px;
+  width: 100%;
   background-color: var(--light-grey-1);
 }
 
@@ -1272,7 +1415,7 @@ body {
 
 .settings_form #modal_content button {
   background-color: var(--dark-caramel);
-  width: 115px;
+  width: 42%;
   outline: none;
   letter-spacing: 1px;
   border: none;
@@ -1289,14 +1432,20 @@ body {
 }
 
 .settings_form #modal_content .settings_footer {
-  width: 415px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 @media (max-height: 800px) {
+  .settings_form #modal_content {
+    padding-top: 20px;
+  }
   .settings_form #modal_content .element {
+    margin-top: 10px;
+  }
+  .settings_form #modal_content .settings_footer {
     margin-top: 10px;
   }
 }
