--- a/assets/scss/_login.scss
+++ b/assets/scss/_login.scss
@@ -1,8 +1,12 @@
 .login{
     // background: var(--pure-black);
     // background: linear-gradient(to right, #1a120c, #000000);
-    background-color: var(--pure-black);
-    background: linear-gradient(to right, #2c2c2c, #050505);
+    // background-color: var(--pure-black);
+    // background: linear-gradient(to right, #2c2c2c, #050505);
+
+    background: url("../img/background.jpg");
+    background-size:cover;
+    background-position: center;
 
     display: flex;
     justify-content: center;
@@ -10,21 +14,29 @@
     color: var(--dark-caramel);
     letter-spacing: 1px;
 
+    p{
+        padding: 10px 0 5px 0;
+    }
+
     h1{
-        font-weight: 500;
+        font-weight: 300;
         color:var(--pure-white);
-        margin-bottom: 5px;
+        margin-bottom: 10px;
     }
     
+
+    #mark{
+        margin-bottom: 20px;
+    }
+
     .box{
         width: 400px;
         padding: 40px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        //background-color: rgba($color: #422b2b, $alpha: 0.4);
+        background-color: rgba($color: #000000, $alpha: 0.8);
         text-align: center;
-        // border-radius: 10px;
         font-weight: 500;
          border: 2px solid var(--pure-white);
         
