--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -233,6 +233,10 @@ input {
   padding: 0 15px 0 20px;
 }
 
+.sidebar__options .mobile-only {
+  display: none;
+}
+
 .sidebar__options li {
   display: flex;
 }
@@ -264,6 +268,21 @@ input {
 
 .sidebar__options li.actual .selector {
   background-color: var(--dark-caramel);
+}
+
+@media (max-height: 600px) {
+  .sidebar {
+    padding: 76px 0 10px 0;
+  }
+  .sidebar img {
+    width: 40%;
+  }
+  .sidebar__options {
+    padding-top: 0;
+  }
+  .sidebar__admin__details {
+    padding: 25px 0 15px 0;
+  }
 }
 
 @media (max-width: 1000px) {
@@ -444,9 +463,10 @@ input {
 }
 
 .employees hr {
+  display: none;
   width: 100%;
   border: 0;
-  height: 1px;
+  height: 2px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), var(--light-grey-1), rgba(0, 0, 0, 0));
 }
 
@@ -469,6 +489,8 @@ input {
   width: 100%;
   grid-template-columns: 0.5fr 1fr 0.8fr 1fr 1.5fr 0.5fr;
   padding: 10px;
+  background-color: var(--dark-grey-2);
+  color: var(--light-white);
 }
 
 .employees .table-row {
@@ -478,6 +500,10 @@ input {
   padding: 10px;
   color: var(--dark-grey-2);
   align-items: center;
+}
+
+.employees .table-row:nth-last-of-type(even) {
+  background-color: var(--light-white);
 }
 
 .employees .user {
@@ -503,7 +529,7 @@ input {
 }
 
 .employees .editEmployeeBtn:hover {
-  opacity: 0.8;
+  color: var(--dark-grey-1);
 }
 
 .employees .addEmployeeBtn {
@@ -516,10 +542,16 @@ input {
 }
 
 .employees .addEmployeeBtn:hover {
-  opacity: 0.8;
+  color: var(--light-white);
 }
 
 @media (max-width: 900px) {
+  .employees hr {
+    display: block;
+  }
+  .employees .header hr {
+    display: none;
+  }
   .employees .header .table-header {
     display: none;
   }
@@ -527,9 +559,6 @@ input {
     grid-template-columns: 1fr;
     text-align: center;
     line-height: 1.4;
-  }
-  .employees .table-row .editEmployeeBtn {
-    display: none;
   }
 }
 
@@ -637,9 +666,10 @@ input {
 }
 
 .rooms hr {
+  display: none;
   width: 100%;
   border: 0;
-  height: 1px;
+  height: 2px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), var(--light-grey-1), rgba(0, 0, 0, 0));
 }
 
@@ -662,6 +692,8 @@ input {
   width: 100%;
   grid-template-columns: 0.5fr 0.8fr 0.8fr 0.8fr 1fr 0.5fr;
   padding: 10px;
+  background-color: var(--dark-grey-2);
+  color: var(--light-white);
 }
 
 .rooms .table-row {
@@ -671,6 +703,10 @@ input {
   padding: 10px;
   color: var(--dark-grey-2);
   align-items: center;
+}
+
+.rooms .table-row:nth-last-of-type(even) {
+  background-color: var(--light-white);
 }
 
 .rooms .user {
@@ -696,7 +732,7 @@ input {
 }
 
 .rooms .editRoomBtn:hover {
-  opacity: 0.8;
+  color: var(--dark-grey-1);
 }
 
 .rooms .addRoomBtn {
@@ -709,10 +745,16 @@ input {
 }
 
 .rooms .addRoomBtn:hover {
-  opacity: 0.8;
+  color: var(--light-white);
 }
 
 @media (max-width: 900px) {
+  .rooms hr {
+    display: block;
+  }
+  .rooms .header hr {
+    display: none;
+  }
   .rooms .header .table-header {
     display: none;
   }
@@ -720,9 +762,6 @@ input {
     grid-template-columns: 1fr;
     text-align: center;
     line-height: 1.4;
-  }
-  .rooms .table-row .editRoomBtn {
-    display: none;
   }
 }
 
@@ -830,9 +869,10 @@ input {
 }
 
 .reservations hr {
+  display: none;
   width: 100%;
   border: 0;
-  height: 1px;
+  height: 2px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), var(--light-grey-1), rgba(0, 0, 0, 0));
 }
 
@@ -855,6 +895,8 @@ input {
   width: 100%;
   grid-template-columns: 0.5fr 0.8fr 0.8fr 0.8fr 1fr;
   padding: 10px;
+  background-color: var(--dark-grey-2);
+  color: var(--light-white);
 }
 
 .reservations .table-row {
@@ -864,6 +906,10 @@ input {
   padding: 10px;
   color: var(--dark-grey-2);
   align-items: center;
+}
+
+.reservations .table-row:nth-last-of-type(even) {
+  background-color: var(--light-white);
 }
 
 .reservations .table-row .short {
@@ -910,6 +956,12 @@ input {
 }
 
 @media (max-width: 900px) {
+  .reservations hr {
+    display: block;
+  }
+  .reservations .header hr {
+    display: none;
+  }
   .reservations .header .table-header {
     display: none;
   }
@@ -1146,6 +1198,7 @@ input {
   font-size: 25px;
   color: var(--light-grey-2);
   margin: 40px;
+  text-align: center;
 }
 
 #edit_employee_form .element {
@@ -1162,6 +1215,7 @@ input {
   color: var(--dark-grey-2);
   width: 100%;
   height: 100%;
+  min-height: 40px;
   font-weight: 500;
   font-size: 18px;
   padding-left: 15px;
@@ -1201,20 +1255,52 @@ input {
 }
 
 #edit_employee_form button:hover {
+  filter: brightness(0.9);
+}
+
+#edit_employee_form .delete-employee-button {
+  background: #be3838;
   opacity: 0.8;
+  text-align: center;
+  width: 27.27%;
+  outline: none;
+  letter-spacing: 1px;
+  border: none;
+  margin-top: 0px;
+  padding: 15px;
+  cursor: pointer;
+  color: var(--pure-white);
+  font-weight: 500;
+  font-size: 18px;
+}
+
+#edit_employee_form .delete-employee-button:hover {
+  opacity: 1;
 }
 
 #edit_employee_form .edit_employee_footer {
   width: 80%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   margin-top: 40px;
+}
+
+@media (max-width: 800px) {
+  #edit_employee_form button, #edit_employee_form .delete-employee-button {
+    width: 47%;
+  }
+}
+
+@media (max-width: 1300px) {
+  #edit_employee_form .element {
+    grid-template-columns: 1fr;
+  }
 }
 
 @media (max-height: 800px) {
   #edit_employee_form {
     min-height: calc(100vh - 76px - 39px - 20px);
-    margin-top: 0px;
+    margin-top: 20px;
     margin-bottom: -10px;
   }
   #edit_employee_form .element {
@@ -1233,7 +1319,7 @@ input {
 }
 
 #edit_room_form {
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1268,6 +1354,7 @@ input {
   font-size: 25px;
   color: var(--light-grey-2);
   margin: 40px;
+  text-align: center;
 }
 
 #edit_room_form .element {
@@ -1284,6 +1371,7 @@ input {
   color: var(--dark-grey-2);
   width: 100%;
   height: 100%;
+  min-height: 40px;
   font-weight: 500;
   font-size: 18px;
   padding-left: 15px;
@@ -1310,6 +1398,7 @@ input {
 
 #edit_room_form button {
   background-color: var(--dark-caramel);
+  text-align: center;
   width: 27.27%;
   outline: none;
   letter-spacing: 1px;
@@ -1323,20 +1412,52 @@ input {
 }
 
 #edit_room_form button:hover {
+  filter: brightness(0.9);
+}
+
+#edit_room_form .delete-room-button {
+  background: #be3838;
   opacity: 0.8;
+  text-align: center;
+  width: 27.27%;
+  outline: none;
+  letter-spacing: 1px;
+  border: none;
+  margin-top: 0px;
+  padding: 15px;
+  cursor: pointer;
+  color: var(--pure-white);
+  font-weight: 400;
+  font-size: 18px;
+}
+
+#edit_room_form .delete-room-button:hover {
+  opacity: 1;
 }
 
 #edit_room_form .edit_room_footer {
   width: 80%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   margin-top: 40px;
+}
+
+@media (max-width: 800px) {
+  #edit_room_form button, #edit_room_form .delete-room-button {
+    width: 47%;
+  }
+}
+
+@media (max-width: 1300px) {
+  #edit_room_form .element {
+    grid-template-columns: 1fr;
+  }
 }
 
 @media (max-height: 800px) {
   #edit_room_form {
     min-height: calc(100vh - 76px - 39px - 20px);
-    margin-top: 0px;
+    margin-top: 20px;
     margin-bottom: -10px;
   }
   #edit_room_form .element {
@@ -1349,6 +1470,339 @@ input {
     margin: 30px;
   }
   #edit_room_form hr:nth-of-type(2) {
+    margin-top: 12px;
+  }
+}
+
+#room-type {
+  letter-spacing: 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  background-color: var(--pure-white);
+  box-shadow: 2px 0 40px -25px;
+  width: 90%;
+  min-height: calc(100vh - 76px - 39px - 80px);
+  margin: 30px auto 0 auto;
+  padding-bottom: 40px;
+}
+
+#room-type hr {
+  height: 3px;
+  width: 80%;
+  border: 0;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), var(--light-white), rgba(0, 0, 0, 0));
+}
+
+#room-type hr:nth-of-type(1) {
+  margin-top: -10px;
+}
+
+#room-type hr:nth-of-type(2) {
+  margin-top: 20px;
+}
+
+#room-type h1 {
+  font-weight: 700;
+  font-size: 25px;
+  color: var(--light-grey-2);
+  margin: 40px;
+}
+
+#room-type .element {
+  display: grid;
+  width: 80%;
+  grid-template-columns: 0.5fr 1.5fr;
+  align-items: center;
+  margin-top: 20px;
+}
+
+#room-type .element label {
+  display: flex;
+  align-items: center;
+  color: var(--pure-black);
+  width: 100%;
+  height: 100%;
+  min-height: 40px;
+  font-weight: 500;
+  font-size: 18px;
+  padding-left: 15px;
+  background-color: var(--light-grey-1);
+}
+
+#room-type input, #room-type textarea {
+  color: var(--dark-grey-2);
+  width: 100%;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+  background-color: var(--light-white);
+}
+
+#room-type .textarea {
+  font-family: 'Roboto';
+  letter-spacing: 1px;
+  resize: vertical;
+  min-height: 100px;
+}
+
+#room-type select {
+  color: var(--dark-grey-2);
+  width: 100%;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+  background-color: var(--light-white);
+}
+
+#room-type button {
+  background-color: var(--dark-caramel);
+  width: 20%;
+  outline: none;
+  letter-spacing: 1px;
+  border: none;
+  margin-top: 0px;
+  padding: 15px;
+  cursor: pointer;
+  color: var(--pure-white);
+  font-weight: 500;
+  font-size: 18px;
+}
+
+#room-type button:hover {
+  opacity: 0.8;
+}
+
+#room-type .edit_room_footer {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+@media (max-width: 800px) {
+  #room-type button {
+    width: 40%;
+  }
+}
+
+@media (max-width: 1300px) {
+  #room-type .element {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-height: 800px) {
+  #room-type {
+    min-height: calc(100vh - 76px - 39px - 20px);
+    margin-top: 0px;
+    margin-bottom: -10px;
+  }
+  #room-type .element {
+    margin-top: 10px;
+  }
+  #room-type .edit_room_footer {
+    margin-top: 30px;
+  }
+  #room-type h1 {
+    margin: 30px;
+  }
+  #room-type hr:nth-of-type(2) {
+    margin-top: 12px;
+  }
+}
+
+.settings_forms {
+  letter-spacing: 2px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: flex-start;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  background-color: var(--pure-white);
+  box-shadow: 2px 0 40px -25px;
+  width: 90%;
+  min-height: calc(100vh - 78px - 39px - 60px);
+  margin: 20px auto 0 auto;
+  padding-bottom: 40px;
+}
+
+.settings_forms h1 {
+  font-weight: 700;
+  font-size: 25px;
+  color: var(--light-grey-2);
+  margin: 40px;
+  width: 100%;
+  text-align: center;
+}
+
+.settings_forms hr {
+  height: 3px;
+  width: 90%;
+  border: 0;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), var(--light-white), rgba(0, 0, 0, 0));
+}
+
+.settings_forms hr:nth-of-type(1) {
+  margin-top: -10px;
+}
+
+.settings_forms hr:nth-of-type(2) {
+  margin-top: 20px;
+}
+
+.settings_forms #settings_form_1, .settings_forms #settings_form_2 {
+  margin-top: 30px;
+  width: 45%;
+  display: flex;
+  padding: 20px 0 30px 0;
+  flex-direction: column;
+  align-items: center;
+}
+
+.settings_forms #settings_form_1 .subtitle1, .settings_forms #settings_form_2 .subtitle1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--light-white);
+  font-weight: 500;
+  width: 90%;
+  height: 40px;
+  text-align: center;
+  background: var(--dark-grey-2);
+}
+
+.settings_forms #settings_form_1 .element, .settings_forms #settings_form_2 .element {
+  display: grid;
+  width: 90%;
+  grid-template-columns: 1fr;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.settings_forms #settings_form_1 .element label, .settings_forms #settings_form_2 .element label {
+  display: flex;
+  align-items: center;
+  color: var(--dark-grey-2);
+  width: 100%;
+  height: 100%;
+  font-weight: 500;
+  font-size: 18px;
+  padding-left: 15px;
+  background-color: var(--light-grey-1);
+}
+
+.settings_forms #settings_form_1 input, .settings_forms #settings_form_2 input {
+  color: var(--dark-grey-2);
+  width: 100%;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+  background-color: var(--light-white);
+  outline: none;
+}
+
+.settings_forms #settings_form_1 select, .settings_forms #settings_form_2 select {
+  color: var(--dark-grey-2);
+  width: 100%;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+  background-color: var(--light-white);
+}
+
+.settings_forms #settings_form_1 button, .settings_forms #settings_form_2 button {
+  background-color: var(--dark-caramel);
+  width: 60%;
+  min-width: 170px;
+  outline: none;
+  letter-spacing: 1px;
+  border: none;
+  margin-top: 0px;
+  padding: 15px;
+  cursor: pointer;
+  color: var(--pure-white);
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.settings_forms #settings_form_1 button:hover, .settings_forms #settings_form_2 button:hover {
+  filter: brightness(0.9);
+}
+
+.settings_forms #settings_form_1 .edit_employee_footer, .settings_forms #settings_form_2 .edit_employee_footer {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.settings_forms #delete-button {
+  margin-top: 40px;
+  min-width: 21%;
+  padding: 17px;
+  background: #be3838;
+  opacity: 0.7;
+  color: white;
+  text-align: center;
+}
+
+.settings_forms #delete-button:hover {
+  opacity: 0.9;
+}
+
+@media (max-width: 800px) {
+  .settings_forms .element {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .settings_forms .element label {
+    height: 30px;
+  }
+}
+
+@media (max-width: 1010px), (orientation: portrait) {
+  .settings_forms {
+    min-height: calc(100vh - 78px - 39px - 80px - 0px);
+  }
+  .settings_forms #settings_form_1, .settings_forms #settings_form_2 {
+    width: 80%;
+  }
+  .settings_forms #settings_form_1 .edit_employee_footer, .settings_forms #settings_form_2 .edit_employee_footer {
+    margin-top: 20px;
+  }
+}
+
+@media (max-height: 1000px) and (orientation: portrait) {
+  .settings_forms #settings_form_1, .settings_forms #settings_form_2 {
+    margin-top: 0px;
+  }
+  .settings_forms #delete-button {
+    margin-top: 20px;
+  }
+}
+
+@media (max-height: 860px) {
+  .settings_forms {
+    min-height: calc(100vh - 78px - 100px);
+    margin-top: 20px;
+    margin-bottom: -10px;
+  }
+  .settings_forms .element {
+    margin-top: 10px;
+  }
+  .settings_forms .edit_employee_footer {
+    margin-top: 20px;
+    margin-bottom: -10px;
+  }
+  .settings_forms h1 {
+    margin: 30px;
+  }
+  .settings_forms hr:nth-of-type(2) {
     margin-top: 12px;
   }
 }
@@ -1462,8 +1916,12 @@ body {
 
 @media (max-width: 600px) {
   .sidebar {
+    width: 230px;
     position: fixed;
-    transform: translate(-220px, 0);
+    transform: translate(-230px, 0);
+  }
+  .sidebar .sidebar__options .mobile-only {
+    display: block;
   }
   .settings_form #modal_content {
     margin-top: 12vh;
