--- a/assets/scss/_edit-room.scss
+++ b/assets/scss/_edit-room.scss
@@ -1,5 +1,5 @@
 #edit_room_form{
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,6 +34,7 @@
          font-size: 25px;
         color: var(--light-grey-2);
         margin:40px;
+        text-align: center;
     }
 
     .element{
@@ -55,6 +56,7 @@
             color: var(--dark-grey-2);
             width: 100%;
             height: 100%;
+            min-height: 40px;
             font-weight: 500;
             font-size: 18px;
             padding-left: 15px;
@@ -85,6 +87,7 @@
     
     button{
         background-color: var(--dark-caramel);
+        text-align: center;
         width: 27.27%;
         outline: none;
         letter-spacing: 1px;
@@ -96,23 +99,52 @@
         font-weight: 500;
         font-size: 18px;
         &:hover{
-            opacity: 0.8;
+           filter: brightness(0.9);
+        }
+    }
+
+    .delete-room-button{
+        background: rgb(190, 56, 56);
+        opacity: 0.8;
+        text-align: center;
+        width: 27.27%;
+        outline: none;
+        letter-spacing: 1px;
+        border: none;
+        margin-top: 0px;
+        padding: 15px;
+        cursor: pointer;
+        color: var(--pure-white);
+        font-weight: 400;
+        font-size: 18px;
+        &:hover{
+            opacity: 1;
         }
     }
 
     .edit_room_footer{
         width: 80%;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         margin-top: 40px;
     }
-    
 
+    @media (max-width: 800px) {
+        button, .delete-room-button{
+            width: 47%;
+        }
+    }
+
+    @media (max-width: 1300px) {
+        .element{
+            grid-template-columns: 1fr;
+        }
+    }
 
     @media (max-height: 800px){
 
         min-height: calc(100vh - 76px - 39px - 20px);
-        margin-top: 0px;
+        margin-top: 20px;
         margin-bottom: -10px;
         .element{
             margin-top: 10px;
