--- a/assets/scss/_room-type.scss
+++ b/assets/scss/_room-type.scss
@@ -1,4 +1,4 @@
-#edit_employee_form{
+#room-type{
     letter-spacing: 2px;
     display: flex;
     flex-direction: column;
@@ -34,14 +34,13 @@
          font-size: 25px;
         color: var(--light-grey-2);
         margin:40px;
-        text-align: center;
     }
 
     .element{
         display: grid;
         width: 80%;
         // max-width: 1000px;
-        grid-template-columns: 1.5fr 4fr;
+        grid-template-columns: 0.5fr 1.5fr;
         align-items: center;
         margin-top: 20px;
         
@@ -53,7 +52,7 @@
         label{
             display: flex;
             align-items: center;
-            color: var(--dark-grey-2);
+            color: var(--pure-black);
             width: 100%;
             height: 100%;
             min-height: 40px;
@@ -64,7 +63,7 @@
         }
     }
 
-    input{
+    input, textarea{
         
         color: var(--dark-grey-2);
         width: 100%;
@@ -72,6 +71,13 @@
         padding: 15px;
         border: none;
         background-color: var(--light-white);
+    }
+
+    .textarea{
+        font-family: 'Roboto';
+        letter-spacing: 1px;
+        resize: vertical;
+        min-height: 100px;
     }
 
     select{
@@ -87,7 +93,7 @@
     
     button{
         background-color: var(--dark-caramel);
-        width: 27.27%;
+        width: 20%;
         outline: none;
         letter-spacing: 1px;
         border: none;
@@ -98,39 +104,21 @@
         font-weight: 500;
         font-size: 18px;
         &:hover{
-           filter: brightness(0.9);
+            opacity: 0.8;
         }
     }
 
-    .delete-employee-button{
-        background: rgb(190, 56, 56);
-        opacity: 0.8;
-        text-align: center;
-        width: 27.27%;
-        outline: none;
-        letter-spacing: 1px;
-        border: none;
-        margin-top: 0px;
-        padding: 15px;
-        cursor: pointer;
-        color: var(--pure-white);
-        font-weight: 500;
-        font-size: 18px;
-        &:hover{
-            opacity: 1;
-        }
-    }
-
-    .edit_employee_footer{
+    .edit_room_footer{
         width: 80%;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         margin-top: 40px;
     }
-    
+
+
     @media (max-width: 800px) {
-        button, .delete-employee-button{
-            width: 47%;
+        button{
+            width: 40%;
         }
     }
 
@@ -139,21 +127,23 @@
             grid-template-columns: 1fr;
         }
     }
+    
 
-   
+
 
     @media (max-height: 800px){
 
         min-height: calc(100vh - 76px - 39px - 20px);
-        margin-top: 20px;
+        margin-top: 0px;
         margin-bottom: -10px;
         .element{
             margin-top: 10px;
         }
 
-        .edit_employee_footer{
-            margin-top: 20px;
-            margin-bottom: -10px;
+       
+
+        .edit_room_footer{
+            margin-top: 30px;
         }
 
         h1{
