--- a/assets/scss/_rooms.scss
+++ b/assets/scss/_rooms.scss
@@ -11,9 +11,10 @@
     margin: 30px auto 0 auto;
     padding-bottom: 40px;
      hr{
+        display: none;
         width: 100%;
         border: 0;
-        height: 1px;
+        height: 2px;
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0), var(--light-grey-1), rgba(0, 0, 0, 0));
      }
 
@@ -34,6 +35,8 @@
             width: 100%;
             grid-template-columns: 0.5fr 0.8fr 0.8fr 0.8fr 1fr 0.5fr;
             padding: 10px;
+            background-color: var(--dark-grey-2);
+            color: var(--light-white);
         }
 
     }
@@ -44,6 +47,10 @@
         padding: 10px;
         color: var(--dark-grey-2);
         align-items: center;
+
+        &:nth-last-of-type(even){
+            background-color: var(--light-white);
+        }
     }
 
     .user{
@@ -69,7 +76,7 @@
         cursor: pointer;
 
         &:hover{
-            opacity: 0.8;
+            color: var(--dark-grey-1);
         }
     }
 
@@ -82,14 +89,21 @@
         cursor: pointer;
 
         &:hover{
-            opacity: 0.8;
+            color: var(--light-white);
         }
     }
 
 
 
     @media (max-width: 900px){
+
+        hr{
+            display: block;
+        }
         .header{
+            hr{
+                display: none;
+            }
             .table-header{
                 display: none;
             }
@@ -99,9 +113,9 @@
             text-align: center;
             line-height: 1.4;
 
-            .editRoomBtn{
-                display: none;
-            }
+            // .editRoomBtn{
+            //     display: none;
+            // }
         }
     }
 
