--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -502,7 +502,7 @@ input {
   align-items: center;
 }
 
-.employees .table-row:nth-last-of-type(even) {
+.employees .table-row:nth-of-type(odd) {
   background-color: var(--light-white);
 }
 
@@ -559,6 +559,12 @@ input {
     grid-template-columns: 1fr;
     text-align: center;
     line-height: 1.4;
+  }
+  .employees .table-row:nth-of-type(odd) {
+    background-color: var(--pure-white);
+  }
+  .employees .table-row:nth-of-type(even) {
+    background-color: var(--light-white);
   }
 }
 
@@ -705,7 +711,7 @@ input {
   align-items: center;
 }
 
-.rooms .table-row:nth-last-of-type(even) {
+.rooms .table-row:nth-of-type(odd) {
   background-color: var(--light-white);
 }
 
@@ -762,6 +768,12 @@ input {
     grid-template-columns: 1fr;
     text-align: center;
     line-height: 1.4;
+  }
+  .rooms .table-row:nth-of-type(odd) {
+    background-color: var(--pure-white);
+  }
+  .rooms .table-row:nth-of-type(even) {
+    background-color: var(--light-white);
   }
 }
 
@@ -908,7 +920,7 @@ input {
   align-items: center;
 }
 
-.reservations .table-row:nth-last-of-type(even) {
+.reservations .table-row:nth-of-type(odd) {
   background-color: var(--light-white);
 }
 
@@ -969,6 +981,12 @@ input {
     grid-template-columns: 1fr;
     text-align: center;
     line-height: 1.4;
+  }
+  .reservations .table-row:nth-of-type(odd) {
+    background-color: var(--pure-white);
+  }
+  .reservations .table-row:nth-of-type(even) {
+    background-color: var(--light-white);
   }
 }
 
