--- a/assets/scss/_employees.scss
+++ b/assets/scss/_employees.scss
@@ -48,7 +48,7 @@
         color: var(--dark-grey-2);
         align-items: center;
 
-        &:nth-last-of-type(even){
+        &:nth-of-type(odd){
             background-color: var(--light-white);
         }
     }
@@ -105,15 +105,40 @@
             }
             .table-header{
                 display: none;
+                // display: flex;
+                // justify-content: center;
+                // background-color: var(--pure-white);
+
+                // .parameter{
+                //     display: none;
+                // }
+                // .parameter.add{
+                //     display: inline-block;
+                //     margin: 0 auto;
+
+                //     .addEmployeeBtn{
+                //         background-color: white;
+                //         clip-path: circle(40%);
+                //         font-size: 50px;
+                //         position: fixed;
+                //         bottom: 20px;
+                //         right: 20px;
+                //     }
+                // }
             }
         }
         .table-row{
             grid-template-columns: 1fr;
             text-align: center;
             line-height: 1.4;
-            // .editEmployeeBtn{
-            //     display: none;
-            // }
+            
+            &:nth-of-type(odd){
+                background-color: var(--pure-white);
+            }
+
+            &:nth-of-type(even){
+                background-color: var(--light-white);
+            }
         }
     }
 
@@ -209,8 +234,6 @@
 
         .add_employee_footer{
             width: 415px;
-            // display: flex;
-            // justify-content: center;
             display: flex;
             justify-content: space-between;
             margin-top: 10px;
