--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1987,6 +1987,209 @@ input {
   }
 }
 
+.cleaning-rooms {
+  display: flex;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  background-color: var(--pure-white);
+  box-shadow: 2px 0 40px -25px;
+  width: 90%;
+  margin: 30px auto 0 auto;
+  padding-bottom: 40px;
+}
+
+.cleaning-rooms hr {
+  display: none;
+  width: 100%;
+  border: 0;
+  height: 2px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), var(--light-grey-1), rgba(0, 0, 0, 0));
+}
+
+.cleaning-rooms .header {
+  width: 100%;
+  color: var(--light-grey-2);
+  font-weight: 500;
+}
+
+.cleaning-rooms .header .label {
+  font-size: 25px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  padding: 40px 0 40px 0;
+  text-align: center;
+}
+
+.cleaning-rooms .header .table-header {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 0.5fr 0.8fr 0.8fr 0.6fr;
+  padding: 10px;
+  background-color: var(--dark-grey-2);
+  color: var(--light-white);
+}
+
+.cleaning-rooms .header .table-header .action {
+  margin-left: 35px;
+}
+
+.cleaning-rooms .table-row {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 0.5fr 0.8fr 0.8fr 0.6fr;
+  padding: 10px;
+  color: var(--dark-grey-2);
+  align-items: center;
+  font-weight: 500;
+}
+
+.cleaning-rooms .table-row:nth-of-type(odd) {
+  background-color: var(--light-white);
+}
+
+.cleaning-rooms .table-row .start-button {
+  background-color: var(--dark-caramel);
+  padding: 10px;
+  font-weight: 500;
+  color: var(--pure-white);
+}
+
+.cleaning-rooms .table-row .start-button:hover {
+  filter: brightness(0.9);
+}
+
+.cleaning-rooms .user {
+  font-size: 25px;
+  color: var(--light-grey-2);
+}
+
+.cleaning-rooms .name {
+  font-weight: 700;
+}
+
+.cleaning-rooms .center {
+  text-align: center;
+}
+
+@media (max-width: 900px) {
+  .cleaning-rooms hr {
+    display: block;
+  }
+  .cleaning-rooms .header hr {
+    display: none;
+  }
+  .cleaning-rooms .header .table-header {
+    display: none;
+  }
+  .cleaning-rooms .table-row {
+    grid-template-columns: 1fr;
+    text-align: center;
+    line-height: 1.4;
+  }
+  .cleaning-rooms .table-row .start {
+    margin-top: 15px;
+    margin-bottom: 10px;
+  }
+  .cleaning-rooms .table-row:nth-of-type(odd) {
+    background-color: var(--pure-white);
+  }
+  .cleaning-rooms .table-row:nth-of-type(even) {
+    background-color: var(--light-white);
+  }
+}
+
+.add_room_form {
+  display: none;
+  position: fixed;
+  z-index: 850;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.8);
+  animation-name: modalopen;
+  animation-duration: 0.3s;
+}
+
+.add_room_form #modal_content3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--light-white);
+  margin: 10vh auto;
+  padding: 40px;
+  width: 600px;
+  box-shadow: 2px 0 40px -25px;
+  border-radius: 2px;
+}
+
+.add_room_form #modal_content3 h1 {
+  color: var(--dark-grey-1);
+}
+
+.add_room_form #modal_content3 .element {
+  display: grid;
+  grid-template-columns: 2fr 4fr;
+  align-items: center;
+  margin-top: 20px;
+  background-color: var(--light-grey-1);
+}
+
+.add_room_form #modal_content3 .element label {
+  display: flex;
+  align-items: center;
+  color: var(--dark-grey-2);
+  width: 100%;
+  height: 100%;
+  font-weight: 500;
+  font-size: 18px;
+  padding-left: 15px;
+}
+
+.add_room_form #modal_content3 input {
+  color: var(--dark-grey-2);
+  width: 300px;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+}
+
+.add_room_form #modal_content3 select {
+  color: var(--dark-grey-2);
+  width: 300px;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+}
+
+.add_room_form #modal_content3 button {
+  background-color: var(--dark-caramel);
+  width: 150px;
+  outline: none;
+  letter-spacing: 1px;
+  border: none;
+  margin-top: 20px;
+  padding: 15px;
+  cursor: pointer;
+  color: var(--pure-white);
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.add_room_form #modal_content3 button:hover {
+  opacity: 0.8;
+}
+
+.add_room_form #modal_content3 .add_room_footer {
+  width: 449px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
 body {
   background-color: var(--light-white);
   min-height: 100vh;
